--- a/VisualMoodTracker/VisualMoodTracker/appsettings.json
+++ b/VisualMoodTracker/VisualMoodTracker/appsettings.json
@@ -5,10 +5,10 @@
       "Default": "Warning"
     }
   },
-  "key": "5c79ba17759e48efb972b31e82187fb6",
-  "url": "https://westeurope.api.cognitive.microsoft.com/face/v1.0/detect?returnFaceId=true&returnFaceLandmarks=false&returnFaceAttributes=emotion",
+  "key": "b4f43116e44842a2a0abe45ef3beb75e",
+  "url": "https://westcentralus.api.cognitive.microsoft.com/face/v1.0/detect?returnFaceId=true&returnFaceLandmarks=false&returnFaceAttributes=emotion",
   "ConnectionString": {
     "--VMT": "Server = (localdb)\\mssqllocaldb; Database = VMTData; Trusted_Connection = true",
-    "VMT": "Data Source=tcp:visualmoodtrackerchtestdbserver.database.windows.net,1433;Initial Catalog=VMT_CHTestDB;User Id=hczirjek@visualmoodtrackerchtestdbserver;Password=User2018"
+    "VMT": "Server=tcp:vmttest.database.windows.net,1433;Initial Catalog=vmttest;Persist Security Info=False;User ID=User2019@vmttest;Password=Test2019;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
